# commerce-abuse-defense

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: build-and-push.sh  cad-production.yaml
deploy/k8s/: cronjob-daily.yaml  cronjob-weekly.yaml  mongodb.yaml  namespace.yaml  secret.yaml.example
docs/: architecture.md  blog-measuring-bot-abuse.md  cloudflare-setup.md  shopify-setup.md  threat-model.md
docs/attack-chains/: 001-hidden-product-card-testing.md  002-app-layer-defense-bypass.md
examples/: demo_report.md  quickstart.py  real-shopify-report.md
src/cad/: __init__.py  cli.py  config.py  logging_config.py
src/cad/collectors/: __init__.py  base.py  cloudflare.py  sample.py  shopify.py
src/cad/detectors/: __init__.py  anomalous_agent.py  base.py  geo_concentration.py  hidden_product.py  high_frequency.py  payment_failure.py  session_explosion.py
src/cad/guardrails/: __init__.py  aws_waf.py  base.py  cloudflare.py
src/cad/playbooks/: analytics_pollution.md  bot_traffic.md  card_testing.md
src/cad/reporters/: __init__.py  console_reporter.py  json_reporter.py  markdown_reporter.py
src/cad/scoring/: __init__.py  engine.py  models.py
src/cad/storage/: __init__.py  mongo.py
tests/: test_detectors.py  test_guardrails.py  test_reporters.py  test_scoring.py
tests/fixtures/: sample_cloudflare.json  sample_events.json  sample_orders.json
